Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -148,10 +148,9 @@
         It is also <strong>recommended</strong> to use a virtual environment to use these classifiers. You can create a virtual environment using
         <code>venv</code> or <code>conda</code>:
       </p>
-      <pre><code>
-            python -m venv env
-            source env/bin/activate
-        </code></pre>
+      <pre><code>python -m venv env
+source env/bin/activate
+</code></pre>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
       <h2 id="main-script">Main Script</h2>
@@ -206,10 +205,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Vehicle-Classification
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Vehicle-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Download Model Weights</strong></p>
@@ -228,10 +226,9 @@
             Install Git LFS by following the instructions on the <a href="https://git-lfs.github.com/">official Git LFS website</a>. Then, pull the model
             weights using Git LFS.
           </p>
-          <pre><code>
-                    git lfs install
-                    git lfs pull
-                </code></pre>
+          <pre><code>git lfs install
+git lfs pull
+</code></pre>
           <p>
             Alternatively, you can download the weights file from the <a href="https://pjreddie.com/darknet/yolo/">official YOLO website</a> and place it in the
             <code>Vehicle-Classification</code> directory. However, using Git LFS is recommended.
@@ -327,10 +324,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Mood-Classification
-                    </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Mood-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
@@ -370,10 +366,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Character-Recognition
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Character-Recognition
+</code></pre>
         </li>
         <li>
           <p><strong>Install the required Python dependencies.</strong></p>
@@ -433,10 +428,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Flowers-Classification
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Flowers-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
@@ -474,10 +468,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Object-Classification
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Object-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
