Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -278,10 +278,9 @@ git lfs pull
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Face-Classification
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Face-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Download Model Weights</strong></p>
@@ -511,10 +510,9 @@ cd AI-Classification/Object-Classification
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Animals-Classification
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Animals-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
@@ -551,10 +549,9 @@ cd AI-Classification/Object-Classification
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Speech-Recognition
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Speech-Recognition
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
@@ -608,10 +605,9 @@ cd AI-Classification/Object-Classification
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Sentiment-Analysis
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Sentiment-Analysis
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
@@ -624,10 +620,9 @@ cd AI-Classification/Object-Classification
             <code>training.1600000.processed.noemoticon.csv</code>. This file is stored using Git LFS due to its large size. To pull the large training data,
             use the following command:
           </p>
-          <pre><code>
-                    git lfs install
-                    git lfs pull
-                </code></pre>
+          <pre><code>git lfs install
+git lfs pull
+</code></pre>
           <p>
             Alternatively, you can download the large training data from the
             <a href="http://help.sentiment140.com/for-students">Sentiment140 dataset</a> website and place it in the
@@ -753,6 +748,8 @@ cd AI-Classification/Object-Classification
       </p>
 
       <p>Created with ❤️ by <a href="https://github.com/hoangsonww">Son Nguyen</a> in 2024.</p>
+
+      <p>Vi</p>
     </div>
   </body>
 </html>
