Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -749,7 +749,9 @@ git lfs pull
 
       <p>Created with ❤️ by <a href="https://github.com/hoangsonww">Son Nguyen</a> in 2024.</p>
 
-      <p>Vi</p>
+      <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
+
+      <p>View the repository on GitHub: <a href="https://github.com/hoangsonww/AI-ML-Classifiers">hoangsonww/AI-ML-Classifiers</a>.</p>
     </div>
   </body>
 </html>
