Update: Refactored Source Code

--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
         It is also <strong>recommended</strong> to use a virtual environment to use these classifiers. You can create a virtual environment using
         <code>venv</code> or <code>conda</code>:
       </p>
-      <pre><code>
-            python -m venv env
-            source env/bin/activate
-        </code></pre>
+      <pre><code>python -m venv env
+source env/bin/activate
+</code></pre>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
       <h2 id="main-script">Main Script</h2>
@@ -206,10 +205,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Vehicle-Classification
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Vehicle-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Download Model Weights</strong></p>
@@ -228,10 +226,9 @@
             Install Git LFS by following the instructions on the <a href="https://git-lfs.github.com/">official Git LFS website</a>. Then, pull the model
             weights using Git LFS.
           </p>
-          <pre><code>
-                    git lfs install
-                    git lfs pull
-                </code></pre>
+          <pre><code>git lfs install
+git lfs pull
+</code></pre>
           <p>
             Alternatively, you can download the weights file from the <a href="https://pjreddie.com/darknet/yolo/">official YOLO website</a> and place it in the
             <code>Vehicle-Classification</code> directory. However, using Git LFS is recommended.
@@ -259,7 +256,7 @@
         various classes such as car, truck, bus, motorcycle, and bicycle.
       </p>
       <p class="center">
-        <img src="Vehicle-Classification/vehicle-classi.png" alt="Vehicle Classification Output" />
+        <img src="../Vehicle-Classification/vehicle-classi.png" alt="Vehicle Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -281,10 +278,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Face-Classification
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Face-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Download Model Weights</strong></p>
@@ -311,7 +307,7 @@
       <h3 id="output-1">Output</h3>
       <p>The output will be a video displaying the detected faces along with their estimated age and gender.</p>
       <p class="center">
-        <img src="Human-Face-Classification/face-classi.png" alt="Face Classification Output" />
+        <img src="../Human-Face-Classification/face-classi.png" alt="Face Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -327,10 +323,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Mood-Classification
-                    </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Mood-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
@@ -352,7 +347,7 @@
       <h3 id="output-2">Output</h3>
       <p>The output will display the detected mood in the image, video, or webcam stream and in the console.</p>
       <p class="center">
-        <img src="Mood-Classification/mood-classi.png" alt="Mood Classification Output" />
+        <img src="../Mood-Classification/mood-classi.png" alt="Mood Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -370,10 +365,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Character-Recognition
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Character-Recognition
+</code></pre>
         </li>
         <li>
           <p><strong>Install the required Python dependencies.</strong></p>
@@ -416,7 +410,7 @@
       <h3 id="output-5">Output</h3>
       <p>The output will display the class labels of the characters detected in the image along with the confidence scores.</p>
       <p class="center">
-        <img src="Character-Recognition/character-classi.png" alt="Character Classification Output" />
+        <img src="../Character-Recognition/character-classi.png" alt="Character Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -433,10 +427,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Flowers-Classification
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Flowers-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
@@ -456,7 +449,7 @@
       <h3 id="output-3">Output</h3>
       <p>The output will display the class label of the flower detected in the image along with the confidence score.</p>
       <p class="center">
-        <img src="Flowers-Classification/flower-classi.png" alt="Flower Classification Output" />
+        <img src="../Flowers-Classification/flower-classi.png" alt="Flower Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -474,10 +467,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Object-Classification
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Object-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
@@ -502,7 +494,7 @@
         displaying the detected objects along with their class labels.
       </p>
       <p class="center">
-        <img src="Object-Classification/object-classi.png" alt="Object Classification Output" />
+        <img src="../Object-Classification/object-classi.png" alt="Object Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -518,10 +510,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Animals-Classification
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Animals-Classification
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
@@ -542,7 +533,7 @@
       <h3 id="output-6">Output</h3>
       <p>The output will display the class labels of the animals detected in the image along with the confidence scores.</p>
       <p class="center">
-        <img src="Animals-Classification/animal-classi.png" alt="Animal Classification Output" />
+        <img src="../Animals-Classification/animal-classi.png" alt="Animal Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -558,10 +549,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Speech-Recognition
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Speech-Recognition
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
@@ -584,7 +574,7 @@
         the window.
       </p>
       <p class="center">
-        <img src="Speech-Recognition/speech-classi.png" alt="Speech Recognition Output" />
+        <img src="../Speech-Recognition/speech-classi.png" alt="Speech Recognition Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -615,10 +605,9 @@
       <ol>
         <li>
           <p><strong>Clone the Repository</strong></p>
-          <pre><code>
-                    git clone https://github.com/hoangsonww/AI-Classification.git
-                    cd AI-Classification/Sentiment-Analysis
-                </code></pre>
+          <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
+cd AI-Classification/Sentiment-Analysis
+</code></pre>
         </li>
         <li>
           <p><strong>Install Dependencies</strong></p>
@@ -631,10 +620,9 @@
             <code>training.1600000.processed.noemoticon.csv</code>. This file is stored using Git LFS due to its large size. To pull the large training data,
             use the following command:
           </p>
-          <pre><code>
-                    git lfs install
-                    git lfs pull
-                </code></pre>
+          <pre><code>git lfs install
+git lfs pull
+</code></pre>
           <p>
             Alternatively, you can download the large training data from the
             <a href="http://help.sentiment140.com/for-students">Sentiment140 dataset</a> website and place it in the
@@ -697,11 +685,11 @@
       </p>
       <p><strong>Training Output Example:</strong></p>
       <p class="center">
-        <img src="Sentiment-Analysis/sentiment-train.png" alt="Sentiment Classifier Training Output" />
+        <img src="../Sentiment-Analysis/sentiment-train.png" alt="Sentiment Classifier Training Output" />
       </p>
       <p><strong>Classification Output Example:</strong></p>
       <p class="center">
-        <img src="Sentiment-Analysis/sentiment-classi.png" alt="Sentiment Classifier Classification Output" />
+        <img src="../Sentiment-Analysis/sentiment-classi.png" alt="Sentiment Classifier Classification Output" />
       </p>
       <p>Feel free to experiment with the sentiment classifier and test it with your own sentences and explore how powerful sentiment analysis can be!</p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
@@ -743,7 +731,7 @@
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
       <h2 id="license">License</h2>
-      <p>This project is licensed under the MIT License - see the <a href="LICENSE">LICENSE</a> file for details.</p>
+      <p>This project is licensed under the MIT License - see the <a href="https://github.com/hoangsonww/AI-ML-Classifiers/blob/master/LICENSE">LICENSE</a> file for details.</p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
       <h2 id="live-info-website">Live Info Website</h2>
@@ -760,6 +748,10 @@
       </p>
 
       <p>Created with ❤️ by <a href="https://github.com/hoangsonww">Son Nguyen</a> in 2024.</p>
+
+      <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
+
+      <p>View the repository on GitHub: <a href="https://github.com/hoangsonww/AI-ML-Classifiers">hoangsonww/AI-ML-Classifiers</a>.</p>
     </div>
   </body>
 </html>
