Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -256,7 +256,7 @@ git lfs pull
         various classes such as car, truck, bus, motorcycle, and bicycle.
       </p>
       <p class="center">
-        <img src="../Vehicle-Classification/vehicle-classi.png" alt="Vehicle Classification Output" />
+        <img src="assets/img/vehicle-classi.png" alt="Vehicle Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -307,7 +307,7 @@ cd AI-Classification/Face-Classification
       <h3 id="output-1">Output</h3>
       <p>The output will be a video displaying the detected faces along with their estimated age and gender.</p>
       <p class="center">
-        <img src="../Human-Face-Classification/face-classi.png" alt="Face Classification Output" />
+        <img src="assets/img/face-classi.png" alt="Face Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -347,7 +347,7 @@ cd AI-Classification/Mood-Classification
       <h3 id="output-2">Output</h3>
       <p>The output will display the detected mood in the image, video, or webcam stream and in the console.</p>
       <p class="center">
-        <img src="../Mood-Classification/mood-classi.png" alt="Mood Classification Output" />
+        <img src="assets/img/mood-classi.png" alt="Mood Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -410,7 +410,7 @@ cd AI-Classification/Character-Recognition
       <h3 id="output-5">Output</h3>
       <p>The output will display the class labels of the characters detected in the image along with the confidence scores.</p>
       <p class="center">
-        <img src="../Character-Recognition/character-classi.png" alt="Character Classification Output" />
+        <img src="assets/img/character-classi.png" alt="Character Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -449,7 +449,7 @@ cd AI-Classification/Flowers-Classification
       <h3 id="output-3">Output</h3>
       <p>The output will display the class label of the flower detected in the image along with the confidence score.</p>
       <p class="center">
-        <img src="../Flowers-Classification/flower-classi.png" alt="Flower Classification Output" />
+        <img src="assets/img/flower-classi.png" alt="Flower Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -494,7 +494,7 @@ cd AI-Classification/Object-Classification
         displaying the detected objects along with their class labels.
       </p>
       <p class="center">
-        <img src="../Object-Classification/object-classi.png" alt="Object Classification Output" />
+        <img src="assets/img/object-classi.png" alt="Object Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -533,7 +533,7 @@ cd AI-Classification/Animals-Classification
       <h3 id="output-6">Output</h3>
       <p>The output will display the class labels of the animals detected in the image along with the confidence scores.</p>
       <p class="center">
-        <img src="../Animals-Classification/animal-classi.png" alt="Animal Classification Output" />
+        <img src="assets/img/animal-classi.png" alt="Animal Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -574,7 +574,7 @@ cd AI-Classification/Speech-Recognition
         the window.
       </p>
       <p class="center">
-        <img src="../Speech-Recognition/speech-classi.png" alt="Speech Recognition Output" />
+        <img src="assets/img/speech-classi.png" alt="Speech Recognition Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
@@ -685,11 +685,11 @@ git lfs pull
       </p>
       <p><strong>Training Output Example:</strong></p>
       <p class="center">
-        <img src="../Sentiment-Analysis/sentiment-train.png" alt="Sentiment Classifier Training Output" />
+        <img src="assets/img/sentiment-train.png" alt="Sentiment Classifier Training Output" />
       </p>
       <p><strong>Classification Output Example:</strong></p>
       <p class="center">
-        <img src="../Sentiment-Analysis/sentiment-classi.png" alt="Sentiment Classifier Classification Output" />
+        <img src="assets/img/sentiment-classi.png" alt="Sentiment Classifier Classification Output" />
       </p>
       <p>Feel free to experiment with the sentiment classifier and test it with your own sentences and explore how powerful sentiment analysis can be!</p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
