Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -731,7 +731,10 @@ git lfs pull
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
       <h2 id="license">License</h2>
-      <p>This project is licensed under the MIT License - see the <a href="https://github.com/hoangsonww/AI-ML-Classifiers/blob/master/LICENSE">LICENSE</a> file for details.</p>
+      <p>
+        This project is licensed under the MIT License - see the <a href="https://github.com/hoangsonww/AI-ML-Classifiers/blob/master/LICENSE">LICENSE</a> file
+        for details.
+      </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
       <h2 id="live-info-website">Live Info Website</h2>
