Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -47,7 +47,7 @@
     <div class="container">
       <h1>AI Multitask Classifiers: From Objects to Emotions</h1>
       <p>
-        Created by <a href="https://github.com/hoangsonww">Son Nguyen</a> in 2024, this repository contains Python scripts for various AI-powered classifiers.
+        Created by <a href="https://github.com/hoangsonww">Son Nguyen</a> in 2024, <a href="https://github.com/hoangsonww/AI-ML-Classifiers">this repository</a> contains Python scripts for various AI-powered classifiers.
         These classifiers can be used for object detection, face detection, character recognition, and more. The classifiers are built using popular deep
         learning frameworks such as <code>OpenCV</code>, <code>TensorFlow</code>, and <code>PyTorch</code>.
       </p>
