--- a/information-website/index.html
+++ b/information-website/index.html
@@ -151,6 +151,27 @@
       <pre><code>python -m venv env
 source env/bin/activate
 </code></pre>
+
+      <strong>Note:</strong> If you are unable to use Git LFS, you can download the necessary files from my Google Drive:**
+
+      <ul>
+        <li>
+          <a href="https://drive.google.com/file/d/13Tf2j9blTPUnITUuUtvWNFxUImSz1TKe/view?usp=sharing">YOLOv3 Weights</a>
+        </li>
+        <li>
+          <a href="https://drive.google.com/file/d/1VHdnu9pNPIp2Gu6y0mOW5GB4azaEPu8I/view?usp=sharing">training.1600000.processed.noemoticon.csv</a>
+        </li>
+        <li>
+          <a href="https://drive.google.com/file/d/1NO46ZaztULg-oHImjf5E_Qwb3ht-GtMl/view?usp=sharing">test.csv</a>
+        </li>
+        <li>
+          <a href="https://drive.google.com/file/d/1gs1pjTGsDEgzXd6o-9fvroM0ezmP45pn/view?usp=sharing">train.csv</a>
+        </li>
+        <li>
+          <a href="https://drive.google.com/file/d/13r2bPO_dOPITn4UQh0_0wOWRfERD0UMj/view?usp=sharing">small_dataset.csv</a>
+        </li>
+      </ul>
+
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
       <h2 id="main-script">Main Script</h2>
