Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -152,7 +152,7 @@
 source env/bin/activate
 </code></pre>
 
-      <strong>Note:</strong> If you are unable to use Git LFS, you can download the necessary files from my Google Drive:**
+      <strong>Note:</strong> If you are unable to use Git LFS, you can download the necessary files from my Google Drive:
 
       <ul>
         <li>
