Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -152,7 +152,7 @@
 source env/bin/activate
 </code></pre>
 
-      <strong>Note:</strong> If you are unable to use Git LFS, you can download the necessary files from my Google Drive:
+      <p><strong>Note:</strong> If you are unable to use Git LFS, you can download the necessary files from my Google Drive:</p>
 
       <ul>
         <li>
@@ -171,6 +171,10 @@ source env/bin/activate
           <a href="https://drive.google.com/file/d/13r2bPO_dOPITn4UQh0_0wOWRfERD0UMj/view?usp=sharing">small_dataset.csv</a>
         </li>
       </ul>
+
+      <p>
+        Please feel free to <a href="mailto:hoangson091104@gmail.com">let me know</a> if you encounter any problems with any of the files, or with getting started with the project!
+      </p>
 
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
