Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -152,7 +152,7 @@
 source env/bin/activate
 </code></pre>
 
-      <p><strong>Note:</strong> If you are unable to use Git LFS, you can download the necessary files from my Google Drive:</p>
+      <p><strong>Note:</strong> If you are unable to use Git LFS, or if there are any issues with Git LFS, you can download the necessary files from my Google Drive as an alternative:</p>
 
       <ul>
         <li>
