Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -176,6 +176,10 @@ source env/bin/activate
         Please feel free to <a href="mailto:hoangson091104@gmail.com">let me know</a> if you encounter any problems with any of the files, or with getting started with the project!
       </p>
 
+      <p>
+        <strong>Update:</strong> There has been a known issue with Git LFS bandwidth, which may interrupt your Git cloning experience. Please use the Google Drive links above if you encounter any issues with Git LFS. I apologize for the inconvenience. Feel free to also let me know if you need any other files!
+      </p>
+
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
       <h2 id="main-script">Main Script</h2>
