Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -75,11 +75,13 @@
         Please read this webpage carefully to understand how to use each classifier and how to run the main script to choose and run any of the classifiers.
         Happy classifying! 🚀
       </p>
+
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
       <h2>Table of Contents</h2>
       <div id="table-of-contents">
         <ul>
+          <li><a href="#tech-stack">Tech Stack</a></li>
           <li><a href="#before-you-begin">Before You Begin</a></li>
           <li><a href="#main-script">Main Script - Entry Point</a></li>
           <li><a href="#flask-web-app">Flask Web App</a></li>
@@ -101,6 +103,26 @@
       </div>
 
       <button id="scroll-to-top"><i class="fas fa-arrow-up"></i></button>
+
+      <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
+
+      <div class="tech-stack" id="tech-stack">
+        <h2>Tech Stack</h2>
+        <div class="badges">
+          <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python" />
+          <img src="https://img.shields.io/badge/OpenCV-5C3EE8?style=for-the-badge&logo=opencv&logoColor=white" alt="OpenCV" />
+          <img src="https://img.shields.io/badge/Scikit--learn-F7931E?style=for-the-badge&logo=scikit-learn&logoColor=white" alt="Scikit-learn" />
+          <img src="https://img.shields.io/badge/Pandas-150458?style=for-the-badge&logo=pandas&logoColor=white" alt="Pandas" />
+          <img src="https://img.shields.io/badge/NumPy-013243?style=for-the-badge&logo=numpy&logoColor=white" alt="NumPy" />
+          <img src="https://img.shields.io/badge/NLTK-333333?style=for-the-badge&logo=nltk&logoColor=white" alt="NLTK" />
+          <img src="https://img.shields.io/badge/Matplotlib-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Matplotlib" />
+          <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=for-the-badge&logo=tensorflow&logoColor=white" alt="TensorFlow" />
+          <img src="https://img.shields.io/badge/PyTorch-EE4C2C?style=for-the-badge&logo=pytorch&logoColor=white" alt="PyTorch" />
+          <img src="https://img.shields.io/badge/Flask-000000?style=for-the-badge&logo=flask&logoColor=white" alt="Flask" />
+          <img src="https://img.shields.io/badge/Docker-2496ED?style=for-the-badge&logo=docker&logoColor=white" alt="Docker" />
+          <img src="https://img.shields.io/badge/Heroku-430098?style=for-the-badge&logo=heroku&logoColor=white" alt="Heroku" />
+        </div>
+      </div>
 
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
